--- a/.github/workflows/war-event-trigger.yml
+++ b/.github/workflows/war-event-trigger.yml
@@ -23,11 +23,11 @@ jobs:
           # ==========================================
           # เงื่อนไข:
           # วอทุก 2 ชั่วโมง (00,02,04,...)
-          # เตือนก่อน 30 นาที = ชั่วโมงคี่ นาทีที่ 30
-          # เช่น 01:30, 03:30, 05:30
+          # เตือนก่อน 30 นาที = ชั่วโมงคี่
+          # และอยู่ในช่วงนาที 30-34 (กันดีเลย์)
           # ==========================================
 
-          if [ "$M" -eq 30 ] && [ $((H % 2)) -eq 1 ]; then
+          if [ "$M" -ge 30 ] && [ "$M" -lt 35 ] && [ $((H % 2)) -eq 1 ]; then
 
             WAR_H=$((H + 1))
             if [ $WAR_H -eq 24 ]; then
