Change cron schedule and update notification job

--- a/.github/workflows/war-event-trigger.yml
+++ b/.github/workflows/war-event-trigger.yml
@@ -1,49 +1,17 @@
-name: War Event Trigger
+name: War Event Trigger Test
 
 on:
   schedule:
-    - cron: '*/5 * * * *'   # รันทุก 5 นาที
+    - cron: "* * * * *"   # ทุก 1 นาที
   workflow_dispatch:
 
 jobs:
-  notify:
+  send-test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check time and send alert
+      - name: Send test message to Discord
         run: |
-          # เวลา UTC ปัจจุบัน
-          NOW_H=$(date -u +%H)
-          NOW_M=$(date -u +%M)
-
-          # แปลงเป็นเวลาไทย (UTC+7)
-          H=$(( (10#$NOW_H + 7) % 24 ))
-          M=$((10#$NOW_M))
-
-          # ==========================================
-          # เงื่อนไข:
-          # วอทุก 2 ชั่วโมง (00,02,04,...)
-          # เตือนก่อน 30 นาที = ชั่วโมงคี่
-          # และอยู่ในช่วงนาที 30-34 (กันดีเลย์)
-          # ==========================================
-
-          if [ "$M" -ge 30 ] && [ "$M" -lt 35 ] && [ $((H % 2)) -eq 1 ]; then
-
-            WAR_H=$((H + 1))
-            if [ $WAR_H -eq 24 ]; then
-              WAR_H=0
-            fi
-
-            PREV_H=$((WAR_H - 1))
-            if [ $PREV_H -lt 0 ]; then
-              PREV_H=23
-            fi
-
-            curl -H "Content-Type: application/json" \
-                 -X POST \
-                 -d "{
-                   \"content\": \"⚔️ วอจะเริ่มในอีก 30 นาที!\n\n⏰ ระบบจะเปิดสมัคร Dojo ที่ NPC BattleField\nเฉพาะช่วง 10 นาทีสุดท้ายก่อนเริ่มวอเท่านั้น\n\n📌 เช่น วอ ${WAR_H}:00 จะสมัครได้ตั้งแต่ ${PREV_H}:50\"
-                 }" \
-                 ${{ secrets.DISCORD_WEBHOOK }}
-
-          fi
+          curl -H "Content-Type: application/json" \
+          -X POST \
+          -d '{"content":"🔥 TEST ยิงจาก GitHub Actions สำเร็จ!"}' \
+          ${{ secrets.DISCORD_WEBHOOK }}
