--- a/.github/workflows/war-event-trigger.yml
+++ b/.github/workflows/war-event-trigger.yml
@@ -1,31 +1,50 @@
+# Updated schedule trigger ⚔️ (force reload)
+
 name: War Event Trigger
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # ทุก 5 นาที
+    - cron: "*/5 * * * *"   # รันทุก 5 นาที (UTC)
   workflow_dispatch:
+
+permissions:
+  contents: read
 
 jobs:
   check-and-send:
     runs-on: ubuntu-latest
+
     steps:
       - name: Check time and send alert
         run: |
+          echo "===== DEBUG TIME CHECK ====="
+
           NOW_UTC_H=$(date -u +%H)
           NOW_UTC_M=$(date -u +%M)
 
-          # แปลงเป็นเวลาไทย
+          # แปลงเป็นเวลาไทย (UTC+7)
           H=$(( (10#$NOW_UTC_H + 7) % 24 ))
           M=$((10#$NOW_UTC_M))
 
-          echo "Thai time: $H:$M"
+          printf "Thai time now: %02d:%02d\n" $H $M
+
+          if [ -z "${{ secrets.DISCORD_WEBHOOK }}" ]; then
+            echo "❌ DISCORD_WEBHOOK is empty!"
+            exit 1
+          fi
 
           # ถ้านาที = 30 → เตือน
           if [ "$M" -eq 30 ]; then
-            curl -H "Content-Type: application/json" \
-            -X POST \
-            -d "{\"content\":\"⚔️ อีก 30 นาทีจะถึงเวลาวอ! (วอ $(( (H+1)%24 )):00)\"}" \
-            ${{ secrets.DISCORD_WEBHOOK }}
+
+            NEXT_H=$(( (H + 1) % 24 ))
+            printf "🚀 Sending alert for war at %02d:00\n" $NEXT_H
+
+            curl -s -o /dev/null -w "%{http_code}" \
+              -H "Content-Type: application/json" \
+              -X POST \
+              -d "{\"content\":\"⚔️ อีก 30 นาทีจะถึงเวลาวอ! (วอ ${NEXT_H}:00)\"}" \
+              ${{ secrets.DISCORD_WEBHOOK }}
+
           else
-            echo "ยังไม่ถึงเวลาเตือน"
+            echo "⏳ ยังไม่ถึงเวลาเตือน"
           fi
