--- a/.github/workflows/war-event-trigger.yml
+++ b/.github/workflows/war-event-trigger.yml
@@ -1,33 +1,24 @@
-# Force schedule debug mode ⏰
-
-name: War Event Trigger
+name: 5s Spam Test
 
 on:
-  schedule:
-    - cron: "*/0.1 * * * *"   # ทุก 5 นาที (UTC)
   workflow_dispatch:
 
-permissions:
-  contents: read
-
 jobs:
-  send-time:
+  spam:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Send current Thai time to Discord
+      - name: Send every 5 seconds
         run: |
-          NOW_UTC_H=$(date -u +%H)
-          NOW_UTC_M=$(date -u +%M)
+          for i in {1..12}
+          do
+            NOW=$(date +%H:%M:%S)
+            echo "Sending at $NOW"
 
-          # แปลงเป็นเวลาไทย (UTC+7)
-          H=$(( (10#$NOW_UTC_H + 7) % 24 ))
-          M=$((10#$NOW_UTC_M))
+            curl -H "Content-Type: application/json" \
+              -X POST \
+              -d "{\"content\":\"🔥 TEST ทุก 5 วิ เวลา $NOW\"}" \
+              ${{ secrets.DISCORD_WEBHOOK }}
 
-          printf -v THAI_TIME "%02d:%02d" $H $M
-          echo "Thai time now: $THAI_TIME"
-
-          curl -H "Content-Type: application/json" \
-            -X POST \
-            -d "{\"content\":\"🕒 ระบบทำงานอยู่ ตอนนี้เวลาไทย ${THAI_TIME}\"}" \
-            ${{ secrets.DISCORD_WEBHOOK }}
+            sleep 5
+          done
