--- a/.github/workflows/war-event-trigger.yml
+++ b/.github/workflows/war-event-trigger.yml
@@ -1,39 +1,21 @@
-name: War Event Trigger
+name: War Event Trigger (Force Wake)
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "* * * * *"   # ทุก 1 นาที (UTC)
   workflow_dispatch:
 
 jobs:
-  notify:
+  wakeup-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check Thai time and notify
+      - name: Force schedule test
         run: |
-          # เวลา UTC
-          UTC_H=$(date -u +%H)
-          UTC_M=$(date -u +%M)
+          NOW=$(date -u +"%H:%M:%S")
+          echo "UTC now: $NOW"
 
-          # แปลงเป็นเวลาไทย (UTC+7)
-          H=$(( (10#$UTC_H + 7) % 24 ))
-          M=$((10#$UTC_M))
-
-          printf -v NOW "%02d:%02d" $H $M
-          echo "Thai time: $NOW"
-
-          # เตือนเฉพาะ 30 นาที ก่อนวอ
-          if [ "$M" -eq 30 ] && [ $((H % 2)) -eq 1 ]; then
-
-            WAR_H=$(( (H + 1) % 24 ))
-            printf -v WAR_TIME "%02d:00" $WAR_H
-
-            curl -H "Content-Type: application/json" \
-              -X POST \
-              -d "{\"content\":\"⚔️ อีก 30 นาทีจะถึงเวลาวอ!\n🕒 วอรอบ ${WAR_TIME}\"}" \
-              ${{ secrets.DISCORD_WEBHOOK }}
-
-          else
-            echo "ยังไม่ถึงเวลาเตือน"
-          fi
+          curl -H "Content-Type: application/json" \
+            -X POST \
+            -d "{\"content\":\"🟢 Schedule ทำงานแล้ว เวลา UTC $NOW\"}" \
+            ${{ secrets.DISCORD_WEBHOOK }}
